@@ -177,7 +177,14 @@ void PGNReadFromFile (const char *file)
    (void) yylex();
 
    fclose (fp);
-   ShowBoard ();
+
+   printf("\n--------------------------------------------------\n");
+   printf("%s (%s) x %s (%s) - %s\nSite: %s\nDate: %s\n", 
+          pgn_white  != NULL ? pgn_white  : "Unknown", pgn_whiteELO != NULL ? pgn_whiteELO : "Unknown",
+          pgn_black  != NULL ? pgn_black  : "Unknown", pgn_blackELO != NULL ? pgn_blackELO : "Unknown",
+          pgn_result != NULL ? pgn_result : "Unknown", pgn_site     != NULL ? pgn_site     : "Unknown", 
+          pgn_date   != NULL ? pgn_date   : "Unknown");
+   printf("--------------------------------------------------\n");
 }
 
 /* Only players in the table below are permitted into the opening book 
